tools/shook/src/snapshots/shook__config__tests__test_invalid_config-zero_runner.snap
---
source: src/config.rs
expression: err
---
x TOML parse error at line 1, column 1
│   |
│ 1 | [devop]
│   | ^
│ missing field `runners`
│
